cambios en cartView, CartWidget, EmptyCart, CartContext y estilos

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* Animaciones suaves con Animate.css */
+@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');
+
 * {  
   margin: 0;
   padding: 0;
@@ -120,8 +123,7 @@ a.btn.btn-dark {
 }
 a.btn.btn-primary {
   background-color: #33373b;
-  border: none;  
-  width: 80%;
+  border: none; 
   margin-bottom: 0.6rem;
 }
 
@@ -129,3 +131,35 @@ a.btn.btn-primary {
 .text-error {
   color: #701030; 
 }
+/* carrito */
+.sticky-summary {
+  position: sticky !important;
+  top: 10px; /* El espacio desde el tope de la pantalla */
+  z-index: 10;
+  background-color: white;
+}
+/* estilo para carrito vacio */
+.empty-cart-wrapper {
+  background-color: #fff; 
+  border: 1px solid #ddd; 
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); 
+}
+
+.empty-cart-wrapper h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+}
+
+.empty-cart-wrapper p {
+  font-size: 1.2rem;
+  color: #666;
+}
+
+.empty-cart-wrapper .btn {
+  font-size: 1.1rem;
+  padding: 0.75rem 1.5rem;
+}
+
+
+
