--- a/src/App.css
+++ b/src/App.css
@@ -104,9 +104,9 @@ button.carrito{
   user-select: none;    
 }
 button.carrito:active {  
-  background-color: #33373b;
+  background-color: #BB0F4B;
   color:#fff;
-  border:1px solid #33373b; 
+  border: none;   
 }
 .bot-volver a {
   color: #701030;
@@ -117,14 +117,29 @@ a.btn.btn-dark {
   background-color: #701030;
   border: none;  
   font-size: 1rem;
-  font-weight: 400;
-  width: 80%;
+  font-weight: 400; 
+  margin-bottom: 0.6rem;
+}
+a.btn.btn-dark:active {
+  background-color: #BB0F4B;
+  border: none;  
+}
+a.btn.btn-dark:hover {
+  background-color: #BB0F4B;
+  border: none;  
+  font-size: 1rem;
+  font-weight: 400; 
   margin-bottom: 0.6rem;
 }
 a.btn.btn-primary {
   background-color: #33373b;
-  border: none; 
+  border: solid 1px #33373b;
   margin-bottom: 0.6rem;
+}
+a.btn.btn-primary:hover {
+  background-color: #38393a;
+  border: solid 1px #343638;
+  
 }
 
 /* error 404 */
@@ -138,6 +153,7 @@ a.btn.btn-primary {
   z-index: 10;
   background-color: white;
 }
+
 /* estilo para carrito vacio */
 .empty-cart-wrapper {
   background-color: #fff; 
